# serializer version: 1
# name: test_command_with_connection_options
  '''
                                                                                  
   Usage: snow cmd_with_connection_options [OPTIONS] NAME                         
                                                                                  
  +- Arguments ------------------------------------------------------------------+
  | *    name      TEXT  [default: None] [required]                              |
  +------------------------------------------------------------------------------+
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  +- Connection configuration ---------------------------------------------------+
  | --connection,--environment  -c      TEXT  Name of the connection, as defined |
  |                                           in your `config.toml`. Default:    |
  |                                           `default`.                         |
  | --account,--accountname             TEXT  Name assigned to your Snowflake    |
  |                                           account. Overrides the value       |
  |                                           specified for the connection.      |
  | --user,--username                   TEXT  Username to connect to Snowflake.  |
  |                                           Overrides the value specified for  |
  |                                           the connection.                    |
  | --password                          TEXT  Snowflake password. Overrides the  |
  |                                           value specified for the            |
  |                                           connection.                        |
  | --authenticator                     TEXT  Snowflake authenticator. Overrides |
  |                                           the value specified for the        |
  |                                           connection.                        |
  | --private-key-path                  TEXT  Snowflake private key path.        |
  |                                           Overrides the value specified for  |
  |                                           the connection.                    |
  | --token-file-path                   TEXT  Path to file with an OAuth token   |
  |                                           that should be used when           |
  |                                           connecting to Snowflake            |
  | --database,--dbname                 TEXT  Database to use. Overrides the     |
  |                                           value specified for the            |
  |                                           connection.                        |
  | --schema,--schemaname               TEXT  Database schema to use. Overrides  |
  |                                           the value specified for the        |
  |                                           connection.                        |
  | --role,--rolename                   TEXT  Role to use. Overrides the value   |
  |                                           specified for the connection.      |
  | --warehouse                         TEXT  Warehouse to use. Overrides the    |
  |                                           value specified for the            |
  |                                           connection.                        |
  | --temporary-connection      -x            Uses connection defined with       |
  |                                           command line parameters, instead   |
  |                                           of one defined in config           |
  | --mfa-passcode                      TEXT  Token to use for multi-factor      |
  |                                           authentication (MFA)               |
  | --enable-diag                             Run python connector diagnostic    |
  |                                           test                               |
  | --diag-log-path                     TEXT  Diagnostic report path             |
  | --diag-allowlist-path               TEXT  Diagnostic report path to optional |
  |                                           allowlist                          |
  +------------------------------------------------------------------------------+
  +- Global configuration -------------------------------------------------------+
  | --format           [TABLE|JSON]  Specifies the output format.                |
  |                                  [default: TABLE]                            |
  | --verbose  -v                    Displays log entries for log levels `info`  |
  |                                  and higher.                                 |
  | --debug                          Displays log entries for log levels `debug` |
  |                                  and higher; debug logs contains additional  |
  |                                  information.                                |
  | --silent                         Turns off intermediate output to console.   |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
# name: test_command_with_global_options
  '''
                                                                                  
   Usage: snow cmd_with_global_options [OPTIONS] NAME                             
                                                                                  
  +- Arguments ------------------------------------------------------------------+
  | *    name      TEXT  [default: None] [required]                              |
  +------------------------------------------------------------------------------+
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  +- Global configuration -------------------------------------------------------+
  | --format           [TABLE|JSON]  Specifies the output format.                |
  |                                  [default: TABLE]                            |
  | --verbose  -v                    Displays log entries for log levels `info`  |
  |                                  and higher.                                 |
  | --debug                          Displays log entries for log levels `debug` |
  |                                  and higher; debug logs contains additional  |
  |                                  information.                                |
  | --silent                         Turns off intermediate output to console.   |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
# name: test_command_without_any_options
  '''
                                                                                  
   Usage: snow simple_cmd [OPTIONS] NAME                                          
                                                                                  
  +- Arguments ------------------------------------------------------------------+
  | *    name      TEXT  [default: None] [required]                              |
  +------------------------------------------------------------------------------+
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
# name: test_enabled_command_is_not_visible
  '''
  Usage: snow [OPTIONS] COMMAND [ARGS]...
  Try 'snow --help' for help.
  +- Error ----------------------------------------------------------------------+
  | No such command 'switchable_cmd'.                                            |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_enabled_command_is_visible
  '''
                                                                                  
   Usage: snow switchable_cmd [OPTIONS]                                           
                                                                                  
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  +- Global configuration -------------------------------------------------------+
  | --format           [TABLE|JSON]  Specifies the output format.                |
  |                                  [default: TABLE]                            |
  | --verbose  -v                    Displays log entries for log levels `info`  |
  |                                  and higher.                                 |
  | --debug                          Displays log entries for log levels `debug` |
  |                                  and higher; debug logs contains additional  |
  |                                  information.                                |
  | --silent                         Turns off intermediate output to console.   |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
